bk_ida/gccida/c3/copy_insn_list
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/copy_insn_list/src/integrate.c:1786:4: error: expected ';' after expression
rtx v7; // rbx 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/copy_insn_list/src/integrate.c:1786:5: error: use of undeclared identifier 'v7'
rtx v7; // rbx 
    ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/copy_insn_list/src/integrate.c:1788:4: error: expected ';' after expression
rtx v9; // rbx 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/copy_insn_list/src/integrate.c:1788:5: error: use of undeclared identifier 'v9'
rtx v9; // rbx 
    ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/copy_insn_list/src/integrate.c:1810:4: error: expected ';' after expression
rtx inline_target; // rcx 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/copy_insn_list/src/integrate.c:1810:5: error: use of undeclared identifier 'inline_target'
rtx inline_target; // rcx 
    ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/copy_insn_list/src/integrate.c:1812:4: error: expected ';' after expression
rtx v33; // rbp 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/copy_insn_list/src/integrate.c:1812:5: error: use of undeclared identifier 'v33'
rtx v33; // rbp 
    ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/copy_insn_list/src/integrate.c:1813:4: error: expected ';' after expression
rtx v34; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/copy_insn_list/src/integrate.c:1813:5: error: use of undeclared identifier 'v34'
rtx v34; // rax 
    ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/copy_insn_list/src/integrate.c:1828:4: error: expected ';' after expression
rtx v49; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/copy_insn_list/src/integrate.c:1828:5: error: use of undeclared identifier 'v49'
rtx v49; // rax 
    ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/copy_insn_list/src/integrate.c:1845:27: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
v8 = ( unsigned __int16 *)rtx[2]; 
                          ^~~~~~
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/copy_insn_list/src/integrate.c:1848:1: error: use of undeclared identifier 'v9'
v9 = ( rtx)rtx[2]; 
^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/copy_insn_list/src/integrate.c:1850:1: error: use of undeclared identifier 'v9'
v9 = single_set_2( rtx, *( rtx *)&rtx[2]); 
^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/copy_insn_list/src/integrate.c:1850:33: error: expected expression
v9 = single_set_2( rtx, *( rtx *)&rtx[2]); 
                                ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/copy_insn_list/src/integrate.c:1857:1: error: use of undeclared identifier 'v9'
v9 = 0LL; 
^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/copy_insn_list/src/integrate.c:1865:1: error: use of undeclared identifier 'inline_target'
inline_target = map->inline_target; 
^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/copy_insn_list/src/integrate.c:1866:6: error: use of undeclared identifier 'v9'
if ( v9 && !inline_target && ( *( _DWORD *)v9->fld[0].rtwint & 0x4000FFFF) == 1073741885 ) 
     ^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/copy_insn_list/src/obj/integrate.o] Error 1
